Overflow mobile header fix

--- a/src/components/MobileHeader/MobileHeader.module.scss
+++ b/src/components/MobileHeader/MobileHeader.module.scss
@@ -19,6 +19,10 @@
 
 .left {
   padding: 16px;
+
+  @include responsive('phone', 'phone-xs') {
+    max-width: 85%;
+  }
 }
 
 .icon {
@@ -37,6 +41,12 @@
 
   &::first-letter {
     text-transform: uppercase;
+  }
+
+  @include responsive('phone', 'phone-xs') {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
   }
 }
 
